[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-files = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
env_logger = "0.10"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Template engine (optional, for server-side rendering)
tera = "1.19"

# Solana dependencies
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"
bs58 = "0.5"
base64 = "0.21"

# Database (optional, for future use)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Configuration
config = "0.13"

bincode = "1.3" 